@@ -18,13 +18,17 @@ apply plugin: 'application'
 group = 'com.github.calimero'
 version = '2.6-SNAPSHOT'
 
-sourceCompatibility = 11
-targetCompatibility = 11
+sourceCompatibility = 19
+targetCompatibility = 19
 
 java {
     withSourcesJar()
     withJavadocJar()
 }
+
+tasks.withType(JavaExec) { jvmArgs += "--enable-preview" }
+
+tasks.withType(Test) { jvmArgs += "--enable-preview" }
 
 tasks.withType(Jar) {
 	from("${projectDir}") {
@@ -51,13 +55,14 @@ run {
 }
 
 compileJava.options*.compilerArgs = [
-	'-Xlint:all',
-	'-Xlint:-options',
+	'-Xlint:all,-serial',
+	'--enable-preview',
 ]
 
 compileTestJava.options*.compilerArgs = [
 	'-Xlint:all',
 	'-Xlint:-try',
+	'--enable-preview',
 ]
 
 sourceSets {
@@ -74,6 +79,8 @@ sourceSets {
 
 tasks.withType(Javadoc) {
     options.addStringOption("Xdoclint:-missing", '-quiet')
+    options.addBooleanOption('-enable-preview', true)
+	options.addStringOption("-release", "${targetCompatibility}")
 }
 
 jar {
@@ -87,8 +94,8 @@ test {
 }
 
 dependencies {
-    api "com.github.calimero:calimero-core:${version}"
-    api "com.github.calimero:calimero-device:${version}"
+    api "com.github.calimero:calimero-core-loom:${version}"
+    api "com.github.calimero:calimero-device-loom:${version}"
 
     implementation 'org.slf4j:slf4j-api:1.7.36'
     runtimeOnly 'org.slf4j:slf4j-simple:1.7.36'
@@ -107,7 +114,7 @@ publishing {
             artifactId = rootProject.name
             from components.java
             pom {
-                name = 'Calimero KNXnet/IP Server'
+                name = 'Calimero KNXnet/IP Server (Loom)'
                 description = 'Calimero KNXnet/IP server is a free KNX network server'
                 url = 'https://github.com/calimero-project/calimero-server'
                 inceptionYear = '2006'
